Implement basic settings endpoints
